--- a/index.html
+++ b/index.html
@@ -1,137 +1,137 @@
-<!DOCTYPE htmlです>
-<HTML lang="ja">
-<頭>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta name =" viewport" content="width=device-width, initial-scale=1, minimum-scale=0.1, maximum-scale=4,user-scalable=yes">
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=0.1, maximum-scale=4,user-scalable=yes">
 <!-- quaggaJSの読み込み -->
-<スクリプト src="./quagga.min.js"></script>
-<スクリプト>
+<script src="./quagga.min.js"></script>
+<script>
 var DetectedCount=0,DetectedCode="";
-var  video,tmp,tmp_ctx,jan,prev,prev_ctx,w,h,mw,mh,x1,y1 ;
-ウィンドウ。addEventListener('load',function(event){
-  video=documentです。createElement('video');
-  ビデオ。setAttribute("自動再生","");
-  ビデオ。setAttribute("ミュート","");
-  ビデオ。setAttribute("playsinline","");
-  ビデオ。onloadedmetadata = function(e){video.遊ぶ();};
-  prev=documentです。getElementById("プレビュー");
-  prev_ctx=前へgetContext("2d", {willReadFrequently:true});
-  tmp = ドキュメント。createElement('キャンバス');
-  tmp_ctx = tmp です。getContext("2d", {willReadFrequently:true});
-  jan=documentです。getElementById("jan");
+var video,tmp,tmp_ctx,jan,prev,prev_ctx,w,h,mw,mh,x1,y1;
+window.addEventListener('load',function(event){
+  video=document.createElement('video');
+  video.setAttribute("autoplay","");
+  video.setAttribute("muted","");
+  video.setAttribute("playsinline","");
+  video.onloadedmetadata = function(e){video.play();};
+  prev=document.getElementById("preview");
+  prev_ctx=prev.getContext("2d", {willReadFrequently:true});
+  tmp = document.createElement('canvas');
+  tmp_ctx = tmp.getContext("2d", {willReadFrequently:true});
+  jan=document.getElementById("jan");
   //カメラ使用の許可ダイアログが表示される
-  ナビゲーター。mediaDevicesです。getUserMedia (英語)(
+  navigator.mediaDevices.getUserMedia(
     //マイクはオフ, カメラの設定   背面カメラを希望する 640×480を希望する
     {"audio":false,"video":{"facingMode":"environment","width":{"ideal":640},"height":{"ideal":480}}}
-  )です。then( 許可された場合
-    関数(ストリーム){
-      ビデオ。srcObject = ストリーム;
+  ).then( //許可された場合
+    function(stream){
+      video.srcObject = stream;
       //0.5秒毎にスキャンする
-      setTimeout(スキャン,500,true);
+      setTimeout(Scan,500,true);
     }
-  )です。catch( 許可されなかった場合
-    function(err){jan.値+=err+'\n';}
+  ).catch( //許可されなかった場合
+    function(err){jan.value+=err+'\n';}
   );
-  関数 Scan(first){
+  function Scan(first){
     if(first){
       //選択された幅高さ
-      w=videoです。ビデオ幅;
-      h=videoです。videoHeight (ビデオの高さ);
+      w=video.videoWidth;
+      h=video.videoHeight;
       //画面上の表示サイズ
-      前へスタイル。width=(w/2)+"px";
-      前へスタイル。height=(h/2)+"px";
+      prev.style.width=(w/2)+"px";
+      prev.style.height=(h/2)+"px";
       //内部のサイズ
-      前へsetAttribute("幅",w);
-      前へsetAttribute("高さ",h);
+      prev.setAttribute("width",w);
+      prev.setAttribute("height",h);
       mw=w*0.5;
-      MH=W*0.2;
+      mh=w*0.2;
       x1=(w-mw)/2;
       y1=(h-mh)/2;
     }
-    prev_ctx。drawImage(ビデオ,0,0,w,h );
-    prev_ctx。beginPath (パスの開始)();
-    prev_ctx。strokeStyle="rgb(255,0,0)";
-    prev_ctx。lineWidth=2 です。;
-    prev_ctx。rect(x1,y1,mw,mh );
-    prev_ctx。卒中();
-    tmp です。setAttribute("幅",mw);
-    tmp です。setAttribute("高さ",mh);
-    tmp_ctx。drawImage(前,x1,y1,mw,mh,0,0,mw,mh );
-    tmp です。toBlob(function(blob){
-      let reader = new FileReader (読者 = 新しい FileReader)();
-      リーダー。onload=関数(){
-        設定しましょう ={
-          デコーダ:{
-            読者: ["ean_reader","ean_8_reader"],
-            multiple: false, 同時に複数のバーコードを解析しない
+    prev_ctx.drawImage(video,0,0,w,h);
+    prev_ctx.beginPath();
+    prev_ctx.strokeStyle="rgb(255,0,0)";
+    prev_ctx.lineWidth=2;
+    prev_ctx.rect(x1,y1,mw,mh);
+    prev_ctx.stroke();
+    tmp.setAttribute("width",mw);
+    tmp.setAttribute("height",mh);
+    tmp_ctx.drawImage(prev,x1,y1,mw,mh,0,0,mw,mh);
+    tmp.toBlob(function(blob){
+      let reader = new FileReader();
+      reader.onload=function(){
+        let config={
+          decoder: {
+            readers: ["ean_reader","ean_8_reader"],
+            multiple: false, //同時に複数のバーコードを解析しない
           },
-          locator:{patchSize:"large",halfSample:false}、
-          locate:false、
-          src:readerです。結果、
+          locator:{patchSize:"large",halfSample:false},
+          locate:false,
+          src:reader.result,
         };
-        クアッガ。decodeSingle(config,function(){});
+        Quagga.decodeSingle(config,function(){});
       }
-      リーダー。readAsDataURL(blob);
+      reader.readAsDataURL(blob);
     });
-    setTimeout(スキャン,50,false);
+    setTimeout(Scan,50,false);
   }
-  クアッガ。onDetected(関数 (result) {
+  Quagga.onDetected(function (result) {
     //読み取り誤差が多いため、3回連続で同じ値だった場合に成功とする
-    if(DetectedCode==result.codeResultです。コード){
-      検出数++;
-    }然も無くば{
+    if(DetectedCode==result.codeResult.code){
+      DetectedCount++;
+    }else{
       DetectedCount=0;
-      DetectedCode=resultです。codeResultです。コード;
+      DetectedCode=result.codeResult.code;
     }
-    if(検出数>=3)){
-      コンソール。log(result.codeResultです。コード);
-      1月value+=resultです。codeResultです。コード+'\n';
-      1月scrollTop=jan です。スクロール高さ;
-      検出コード='';
+    if(DetectedCount>=3){
+      console.log(result.codeResult.code);
+      jan.value+=result.codeResult.code+'\n';
+      jan.scrollTop=jan.scrollHeight;
+      DetectedCode='';
       DetectedCount=0;
     }
   });
 });
-</スクリプト>
-</頭>
-<体>
-  <div><canvas id="プレビュー"></canvas></div>
+</script>
+</head>
+<body>
+  <div><canvas id="preview"></canvas></div>
   <textarea id="jan" rows="8" cols="40"></textarea>
 
 
     <form method="post" name="form" target="dummy" action="https://kanikanidahou.github.io/github-bteam/">
-        <フィールドセット>
-            <div class="コンテナ">
-                <div class="行">
+        <fieldset>
+            <div class="container">
+                <div class="row">
                     <div class="col-lg-8">
                         <h3 class="mt-5">
-Notion<brに送る>
+                            Send To Notion<br>
                             <small class="text-muted">本のバーコードを読んでNotionに追加</small>
-                        </H3の>
+                        </h3>
                         <div><canvas id="preview"></canvas></div> <!--quaggaJSのカメラがここに表示される-->
                         <label class="col-form-label" for="inputDefault">ISBN:</label>
                         <!--quaggaJSでバーコードから読み取ったISBNがここに入力される-->
                         <input type="text" name="isbn" id="ISBN" class="form-control"><br>
-                        <button type="submit" onclick="GetData();"class="btn btn-primary">データ取得</button><br>
+                        <button type="submit" onclick="GetData();" class="btn btn-primary">データ取得</button><br>
                         <img src="" id="imagePlace"><br>
                         <label class="col-form-label" for="inputDefault">画像URL</label> <!--画像URLを取得したらsrcを設定する-->
                         <input type="text" name="imageSrc" id="imageSrc" class="form-control"><br>
                         <label class="col-form-label" for="inputDefault">タイトル</label>
                         <input type="text" name="title" id="title" class="form-control"><br>
                         <label class="col-form-label" for="inputDefault">サブタイトル</label>
-                        <入力タイプ="テキスト" name="subtitle" id="subtitle" class="フォームコントロール"><br>
+                        <input type="text" name="subtitle" id="subtitle" class="form-control"><br>
                         <label class="col-form-label" for="inputDefault">著者</label>
-                        <入力タイプ="text" name="authors" id="authors" class="form-control"><br>
+                        <input type="text" name="authors" id="authors" class="form-control"><br>
                         <label class="col-form-label" for="inputDefault">発売日</label>
-                        <入力タイプ="text" name="publishedDate" id="publishedDate" class="form-control"><br>
+                        <input type="text" name="publishedDate" id="publishedDate" class="form-control"><br>
                         <label class="col-form-label" for="inputDefault">ページ数</label>
                         <input type="text" name="pageCount" id="pageCount" class="form-control"><br>
                         <button type="submit" class="btn btn-primary">Notionに送信</button><br>
-                    </div です>
-                </div です>
-            </div です>
-        </フィールドセット>
-    </形>
+                    </div>
+                </div>
+            </div>
+        </fieldset>
+    </form>
 
-</体>
-</HTMLの
+</body>
+</html>
