--- a/index.html
+++ b/index.html
@@ -86,34 +86,52 @@ window.addEventListener('load', function(event) {
               jan.value = result.codeResult.code;
               DetectedCode = '';
               DetectedCount = 0;
+              console.log("Detected Code: " + result.codeResult.code); // デバッグ用
             }
           }
         });
-        function GetData() {
-            url = "https://www.googleapis.com/books/v1/volumes?q=isbn:"; //ISBNの手前まで
-            isbn = document.getElementById("ISBN").value;
-
-            let request = new XMLHttpRequest();
-            request.open('GET', url + isbn);
-            request.responseType = 'json';
-            request.send();
-            request.onload = function () {
-                const result = request.response;
-                document.getElementById("title").value = result["items"][0]["volumeInfo"]["title"];
-                document.getElementById("subtitle").value = result["items"][0]["volumeInfo"]["subtitle"];
-                document.getElementById("authors").value = result["items"][0]["volumeInfo"]["authors"];
-                document.getElementById("publishedDate").value = result["items"][0]["volumeInfo"]["publishedDate"];
-                document.getElementById("pageCount").value = result["items"][0]["volumeInfo"]["pageCount"];
-                document.getElementById("imagePlace").src = "https://images-na.ssl-images-amazon.com/images/P/" + toISBN10(isbn) + ".09.LZZZZZZZ.jpg";
-                document.getElementById("imageSrc").value = "https://images-na.ssl-images-amazon.com/images/P/" + toISBN10(isbn) + ".09.LZZZZZZZ.jpg";
-            }
-        }
       }
       reader.readAsDataURL(blob);
     });
     setTimeout(Scan, 50, false);
   }
 });
+
+// GetData 関数を Scan 関数の外に移動
+function GetData() {
+  const url = "https://www.googleapis.com/books/v1/volumes?q=isbn:";
+  const isbn = document.getElementById("ISBN").value;
+
+  let request = new XMLHttpRequest();
+  request.open('GET', url + isbn);
+  request.responseType = 'json';
+  request.send();
+
+  request.onload = function() {
+    if (request.status === 200) {
+      const result = request.response;
+      if (result.items && result.items.length > 0) {
+        const volumeInfo = result.items[0].volumeInfo;
+        document.getElementById("title").value = volumeInfo.title || "";
+        document.getElementById("subtitle").value = volumeInfo.subtitle || "";
+        document.getElementById("authors").value = (volumeInfo.authors || []).join(", ") || "";
+        document.getElementById("publishedDate").value = volumeInfo.publishedDate || "";
+        document.getElementById("pageCount").value = volumeInfo.pageCount || "";
+        const imageUrl = "https://images-na.ssl-images-amazon.com/images/P/" + isbn + ".09.LZZZZZZZ.jpg";
+        document.getElementById("imagePlace").src = imageUrl;
+        document.getElementById("imageSrc").value = imageUrl;
+      } else {
+        console.error("No items found for the ISBN.");
+      }
+    } else {
+      console.error("Failed to fetch data. Status:", request.status);
+    }
+  };
+
+  request.onerror = function() {
+    console.error("Request failed.");
+  };
+}
 </script>
 </head>
 <body>
@@ -130,7 +148,7 @@ window.addEventListener('load', function(event) {
             <label class="col-form-label" for="ISBN">ISBN:</label>
             <!-- quaggaJSでバーコードから読み取ったISBNがここに入力される -->
             <input type="text" name="isbn" id="ISBN" class="form-control"><br>
-            <button type="submit" onclick="GetData();" class="btn btn-primary">データ取得</button><br>
+            <button type="button" onclick="GetData();" class="btn btn-primary">データ取得</button><br>
             <img src="" id="imagePlace"><br>
             <label class="col-form-label" for="imageSrc">画像URL</label>
             <!-- 画像URLを取得したらsrcを設定する -->
