--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ window.addEventListener('load', function(event) {
 });
 
 function sendToGoogleAppsScript() {
-  const url = 'YOUR_GOOGLE_APPS_SCRIPT_WEB_APP_URL'; // Google Apps ScriptのウェブアプリURL
+  const url = 'https://script.google.com/macros/s/AKfycbwn6eO-9KAgTEx06TPEF19ZSxsuDSJ_1nygOQzH6GetAqnAkt7G8IzuUbuxYjpwjBU/exec'; // Google Apps ScriptのウェブアプリURL
   const data = {
     isbn: document.getElementById('ISBN').value,
     title: document.getElementById('title').value,
