--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ function sendToGoogleAppsScript() {
       'Content-Type': 'application/json'
     },
     body: JSON.stringify(data),
-    mode: 'cors' // CORS設定
+    mode: 'no-cors' // CORS設定
   })
   .then(response => response.text())
   .then(result => console.log('Success:', result))
