--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ function GetData() {
 }
 
 function sendToNotion() {
-  const scriptUrl = 'YOUR_GOOGLE_APPS_SCRIPT_URL'; // Google Apps ScriptのURL
+  const scriptUrl = 'https://script.google.com/macros/s/AKfycbwn6eO-9KAgTEx06TPEF19ZSxsuDSJ_1nygOQzH6GetAqnAkt7G8IzuUbuxYjpwjBU/exec'; // Google Apps ScriptのURL
 
   const data = {
     isbn: document.getElementById("ISBN").value,
