--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=0.1, maximum-scale=4, user-scalable=yes">
-<!-- quaggaJSの読み込み -->
 <script src="./quagga.min.js"></script>
 <script>
 var DetectedCount = 0, DetectedCode = "";
@@ -23,13 +22,11 @@ window.addEventListener('load', function(event) {
   
   jan = document.getElementById("ISBN");
 
-  // カメラ使用の許可ダイアログが表示される
   navigator.mediaDevices.getUserMedia(
     { "audio": false, "video": { "facingMode": "environment", "width": { "ideal": 640 }, "height": { "ideal": 480 } } }
   ).then(
     function(stream) {
       video.srcObject = stream;
-      // 0.5秒毎にスキャンする
       setTimeout(Scan, 500, true);
     }
   ).catch(
@@ -38,13 +35,10 @@ window.addEventListener('load', function(event) {
 
   function Scan(first) {
     if (first) {
-      // 選択された幅高さ
       w = video.videoWidth;
       h = video.videoHeight;
-      // 画面上の表示サイズ
       prev.style.width = (w / 2) + "px";
       prev.style.height = (h / 2) + "px";
-      // 内部のサイズ
       prev.setAttribute("width", w);
       prev.setAttribute("height", h);
       mw = w * 0.5;
@@ -67,7 +61,7 @@ window.addEventListener('load', function(event) {
         let config = {
           decoder: {
             readers: ["ean_reader", "ean_8_reader"],
-            multiple: false // 同時に複数のバーコードを解析しない
+            multiple: false
           },
           locator: { patchSize: "large", halfSample: false },
           locate: false,
@@ -75,7 +69,6 @@ window.addEventListener('load', function(event) {
         };
         Quagga.decodeSingle(config, function(result) {
           if (result && result.codeResult) {
-            // 読み取り誤差が多いため、3回連続で同じ値だった場合に成功とする
             if (DetectedCode == result.codeResult.code) {
               DetectedCount++;
             } else {
@@ -86,7 +79,7 @@ window.addEventListener('load', function(event) {
               jan.value = result.codeResult.code;
               DetectedCode = '';
               DetectedCount = 0;
-              console.log("Detected Code: " + result.codeResult.code); // デバッグ用
+              console.log("Detected Code: " + result.codeResult.code);
             }
           }
         });
@@ -122,7 +115,7 @@ function GetData() {
 }
 
 function sendToNotion() {
-  const scriptUrl = 'https://script.google.com/macros/s/AKfycbwn6eO-9KAgTEx06TPEF19ZSxsuDSJ_1nygOQzH6GetAqnAkt7G8IzuUbuxYjpwjBU/exec'; // Google Apps ScriptのURL
+  const scriptUrl = 'https://script.google.com/macros/s/YOUR_DEPLOYMENT_ID/exec'; // Google Apps ScriptのURL
 
   const data = {
     isbn: document.getElementById("ISBN").value,
@@ -184,4 +177,3 @@ function sendToNotion() {
   </form>
 </body>
 </html>
-
