--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@ function sendToNotion() {
       'Content-Type': 'application/json'
     },
     body: JSON.stringify(data)
+    mode: 'cors' 
   })
   .then(response => response.json())
   .then(result => {
