--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ function GetData() {
 }
 
 function sendToNotion() {
-  const serverUrl = 'http://localhost:3000/'; // Node.jsサーバーのURL
+  const serverUrl = 'http://localhost:3000/api/send-to-notion'; // Node.jsサーバーのURL
 
   const data = {
     isbn: document.getElementById("ISBN").value,
