--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ function GetData() {
 }
 
 function sendToNotion() {
-  const serverUrl = 'https://f732-160-86-249-54.ngrok-free.app/api/send-to-notion '; // Node.jsサーバーのURL
+  const serverUrl = 'https://9dc0-160-86-249-54.ngrok-free.app /api/send-to-notion '; // Node.jsサーバーのURL
 
   const data = {
     isbn: document.getElementById("ISBN").value,
