--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ function GetData() {
 }
 
 function sendToNotion() {
-  const scriptUrl = 'https://9dc0-160-86-249-54.ngrok-free.app/api/send-to-notion'; // ngrokのURL
+  const scriptUrl = 'https://9d8f-153-246-66-6.ngrok-free.app/api/send-to-notion'; // ngrokのURL
 
   const data = {
     isbn: document.getElementById("ISBN").value,
